--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Проба пера</title>
+	<title>Сменил название</title>
 </head>
 <body>
-
+	<h1>Привет</h1>
 </body>
 </html>
