--- a/provlal/site one/index.html
+++ b/provlal/site one/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Сменил название</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
-	<h1>Привет</h1>
+	<div class="content">
+		<div class="content__item">1 block</div>
+		<div class="content__item">2 block</div>
+	</div>
+
 </body>
 </html>
