--- a/provlal/site one/index.html
+++ b/provlal/site one/index.html
@@ -8,9 +8,22 @@
 
 </head>
 <body>
-	<div class="content">
-		<div class="content__item">1 block</div>
-		<div class="content__item">2 block</div>
+	<div class="header">
+		<div class="header__content">
+			<ul class="header__menu">
+				<li><a href='#'>about</a></li>
+				<li><a href='#'>work</a></li>
+				<li><a href='#'>blog</a></li>
+				<li><a href='#'>contact</a></li>
+				<li class="header__menu_last"></li>
+			</ul>
+			<div class="header__logo">logo</div>
+			<div class="header__info">
+				<p class="header__info_h2">Hello</p>
+				<p class="header__info_h1">my name is <span>Vladimir,</span></p>
+				<p class="header__info_h3">i'm a HTML Coder from Orenburg</p>
+			</div>
+		</div>
 	</div>
 
 </body>
